WireArray(Input) is now Wire(End); all in-/outputs are now WireEnds